--- a/src/main/resources/data/jcseg.properties
+++ b/src/main/resources/data/jcseg.properties
@@ -23,6 +23,13 @@ jcseg.cnfratoarabic=1
 #-\u59D3\u540D\u6210\u8BCD\u6B67\u4E49\u9615\u503C(\u4E0D\u7528\u66F4\u6539, \u9664\u975E\u4F60\u77E5\u9053\u4F60\u6539\u4E86\u4EC0\u4E48)\u3002
 jcseg.nsthreshold=1000000
 
+#Wether to start the secondary segmentation for the complex english words.
+jcseg.ensencondseg = 1
+#min length of the secondary simple token. (better larger than 1)
+jcseg.stokenminlen = 2
+#The punctuations that will be keep in an token.(Not the end of the token).
+jcseg.keeppunctuations=@#%.&+
+
 
 # about the lexicon
 lexicon.prefix=lex
